Add validations when logging in and registering an account

--- a/ElectronsFlaskTest/styles/login.css
+++ b/ElectronsFlaskTest/styles/login.css
@@ -48,6 +48,11 @@ body {
   border-top-right-radius: 0;
 }
 
+#errorMessage {
+  font-weight: bold;
+  color: red;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
